--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "nodemailer": "^6.9.14",
+    "nodemailer-express-handlebars": "^6.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
+    "@types/nodemailer-express-handlebars": "^4.0.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.10",
