--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
+    "bcryptjs": "^2.4.3",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "nodemailer": "^6.9.14",
     "nodemailer-express-handlebars": "^6.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/nodemailer-express-handlebars": "^4.0.5",
